Work on the Orders page, edit ejs, controller and add definitions in the model

--- a/recap/nodejs/recap/section13/public/css/nav_style.css
+++ b/recap/nodejs/recap/section13/public/css/nav_style.css
@@ -164,6 +164,7 @@ main.dark::after {
     color: white;
     padding-bottom: 0.6em;
     font-size: 0.7rem;
+    text-decoration: none;
 }
 
 .main-navigation__search {
