--- a/recap/nodejs/recap/section13/views/includes/index-footer.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-footer.ejs
@@ -84,7 +84,7 @@
                     <a href="" class="main-footer__content-links2-list-item1" aria-label="language selection">
                         <span class="globalLanguageIcon"></span>
                         <span class="globalLanguage"></span>
-                        <span class="select-caret-down"></span>
+                        <span class="select-caret-down footer-caret"></span>
                     </a>
                 </li>
                 <li>
