--- a/recap/nodejs/recap/section13/views/includes/index-header.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-header.ejs
@@ -7,7 +7,7 @@
                 <ul class="main-navigation__List-1">
                     <li class="main-navigation__List-1-link-small not_desktop"><a id="header-menu" aria-label="browse categories">=</a></li>
                     <!-- <li class="main-navigation__List-1-link-logo"><a href="" id="header-logo" aria-label="Amazon egypt home"></a><a href="" id="header-logo--text" aria-label="country selection, currently browsing amazon egypt shop" class="globalUrlExt"></a></li> -->
-                    <li class="main-navigation__List-1-link-logo"><a href="" id="header-logo"></a><a href="" id="header-logo--text" class="globalUrlExt"></a></li>
+                    <li class="main-navigation__List-1-link-logo"><a href="/products" id="header-logo"></a><a href="" id="header-logo--text" class="globalUrlExt"></a></li>
                     <li class="main-navigation__List-1-link not_mobile"><a id="header-destination" href="" aria-label="choose delivery destination country">Deliver to<p></p></a></li>
                 </ul>
 
@@ -56,7 +56,7 @@
                                     </li>
                                     <li><a href="/admin/products">Your Products on Sale</a></li>
                                     <li><a href="/admin/add-product">Add a Product</a></li>
-                                    <li><a href="./index-orders.html">Your Orders</a></li>
+                                    <li><a href="/orders">Your Orders</a></li>
                                     <li><a href="">Logout</a></li>
 
                                 </ul>
