--- a/recap/nodejs/recap/section13/views/includes/html-head.ejs
+++ b/recap/nodejs/recap/section13/views/includes/html-head.ejs
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="/css/nav_style.css">
     <link rel="stylesheet" href="/css/footer_style.css">
     <script src="/js/main_header.js" defer></script>
+    <script src="/js/globalValues.js" defer></script> <!--deferred-->
+
 
 
 
