Work on resetting the password functionality, reset via email link and change user password

--- a/recap/nodejs/recap/section15/views/auth/login.ejs
+++ b/recap/nodejs/recap/section15/views/auth/login.ejs
@@ -37,7 +37,7 @@
                                         </label>
                                         <!-- <span class="signup__email--field--message" aria-live="polite"></span> -->
                                     </span>
-                                <input type="text" name="signUpFullName" class="signup__name--field" id="signup__name--field" aria-label="required, enter your first and last name" required>
+                                <input type="text" name="signUpFullName" class="signup__name--field" aria-label="required, enter your first and last name" required>
                                 </span>
 
 
@@ -130,7 +130,7 @@
                                     <details class="login__email--help-details">
                                         <summary>Need help?</summary>
                                         <span class="login__email--help-links">
-                                            <a href="">Forgot your password?</a>
+                                            <a href="/reset">Forgot your password?</a>
                                             <a href="">Other issues with Sign-in</a>
                                         </span>
 
