--- a/recap/nodejs/recap/section15/views/auth/reset.ejs
+++ b/recap/nodejs/recap/section15/views/auth/reset.ejs
@@ -1,15 +1,15 @@
-<%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/auth.css">
+<%- include("../includes/html-head.ejs") %>
 
-</head>
+<link rel="stylesheet" href="/css/login_style.css">
 
-<body>
-   <%- include('../includes/navigation.ejs') %>
 
-   <% if (errorMessage) { %>
-    <div class="user-message user-message--error"><%=errorMessage%></div>
-    <% } %>
+
+
+<%- include("../includes/html-start.ejs") %>
+
+
+    <%- include("../includes/index-header.ejs") %>
+
     <main>
         <form class="login-form" action="/reset" method="POST">
             <div class="form-control">
@@ -21,4 +21,5 @@
             <button class="btn" type="submit">Reset Password</button>
         </form>
     </main>
-<%- include('../includes/end.ejs') %>
+    <%- include("../includes/index-footer.ejs") %>
+<%- include("../includes/html-end.ejs") %>
