--- a/recap/nodejs/recap/section15/views/404.ejs
+++ b/recap/nodejs/recap/section15/views/404.ejs
@@ -11,7 +11,7 @@
     <%- include("includes/index-header.ejs") %>
 
     
-    <h1>Page Not Found!</h1>
+    <h1><%=text%></h1>
 
 
     <%- include("includes/index-footer.ejs") %>
