--- a/recap/nodejs/recap/section15/views/includes/index-header.ejs
+++ b/recap/nodejs/recap/section15/views/includes/index-header.ejs
@@ -30,7 +30,7 @@
                                 <form action="/login" method="GET">
                                     <button class="yellow-button" type="submit">Login here</button>
                                 </form>
-                                <span>New customer? <a href="/login">Start here</a></span>
+                                <span>New customer? <a href="/signup">Start here</a></span>
                                     <span class="mobile-menu-close">x</span> 
                             </div>
                             <% }else if (isAuthenticated) { %>
