continue working on server side validation to display after submitting at login/signup the correct messages for user
- use express-validator to pass after submitting
- old inputs and error messages(login), error messages manual for signup

- sort ejs and pass the right properties from the controllers
- add styling based on passed properties
- display the messages for each signup field from the server validator
- fix some issues with the javascript validation, not allowing autofilled inputs to enable the buttons
- add a special regex for the signup phone number as the country code will be put from the form

--- a/recap/nodejs/recap/section18/public/css/login_style.css
+++ b/recap/nodejs/recap/section18/public/css/login_style.css
@@ -343,6 +343,7 @@ input[type="checkbox"], input[type="radio"] {
     font-style: italic;
 }
 
+
 .signup--label-wrapper {
     display: flex;
     justify-content: space-between;
@@ -396,4 +397,12 @@ input[type="checkbox"], input[type="radio"] {
         display: block;
     }
     
+}
+
+.signup__telephone--field--message, .signup__name--field--message {
+    height: 2rem;
+}
+
+.signup__telephone-label, .signup__name-label {
+    margin-top: auto;
 }
