--- a/recap/nodejs/recap/section18/views/auth/login.ejs
+++ b/recap/nodejs/recap/section18/views/auth/login.ejs
@@ -2,18 +2,24 @@
 
 <link rel="stylesheet" href="/css/login_style.css">
 
-style {
+<style>
     .invalid {
         outline: 1px solid red;
         outline-offset: 2px;
     }
-}
+
+    input:focus {
+        outline: none;
+    }
+
+</style>
 
 
 <%- include("../includes/html-start.ejs") %>
 
 
     <%- include("../includes/index-header.ejs") %>
+
 
     <main>
         <div class="main__login__wrapper">
@@ -36,28 +42,40 @@ style {
                             <form action="/signup" method="POST" class="main__signup__container__fields-container--signup--form" id="signup_content" aria-label="Sign up">
                                 
                                 <span class="signup__input-field">
-                                    <span class="signup--label-wrapper">
-                                        <label for="signup__name--field" class="signup__name-label">
+                                    <div class="signup--label-wrapper">
+                                        <label style="text-wrap:nowrap; margin-right: 1rem;" for="signup__name--field" class="signup__name-label">
                                             <h2>First and last name</h2>
                                         </label>
-                                        <span class="signup__name--field--message" aria-live="polite"></span>
-                                    </span>
+                                        <span style="" class="signup__name--field--message" aria-live="polite">
+                                            <% let nameError =""; %>
+                                            <% validationErrors.forEach(error => { if (error.path === 'signUpFullName') { nameError = error.msg; } }) %>
+                                            <%= nameError %>                                
+                                        </span>
+                                    </div>    
+                                </span>
                                 <input 
                                 value="<%= oldInput.name%>"
-                                type="text" name="signUpFullName" id="signup__name--field" class="signup__name--field <%= validationErrors.find(e => e.path === 'name') ? 'invalid' : '' %>" aria-label="required, enter your first and last name" required>
+                                type="text" name="signUpFullName" id="signup__name--field" class="signup__name--field <%= validationErrors.find(e => e.path === 'signUpFullName') ? 'invalid' : '' %>" aria-label="required, enter your first and last name" required>
                                 </span>
+
 
 
                                 <span class="signup__input-field">
                                     <span class="signup--label-wrapper">
-                                        <label for="signup__email--field" class="signup__email-label">
+                                        <label style="text-wrap:nowrap; margin-right: 1rem;" for="signup__email--field" class="signup__email-label">
                                             <h2>Your email</h2>
                                         </label>
-                                        <span class="signup__email--field--message" aria-live="polite"><%=errorMessage%></span>
-                                    </span>
-                                <input 
-                                value="<%= oldInput.signUpEmail%>"
-                                type="text" name="signUpEmail" id="signup__email--field" class="signup__email--field <%= validationErrors.find(e => e.path === 'signUpEmail') ? 'invalid' : '' %>" aria-label="required, enter an email address in a valid form" required>
+                                        <span style="" class="signup__email--field--message" aria-live="polite">
+                                            <% let emailError =""; %>
+                                            <% validationErrors.forEach(error => { if (error.path === 'signUpEmail') { emailError = error.msg; } }) %>
+                                            <%= emailError %>                                
+                                        </span>
+                                </span>
+                                    <input 
+                                    style=""
+                                    value="<%= oldInput.signUpEmail%>"
+                                    type="text" name="signUpEmail" id="signup__email--field" class="signup__email--field <%= validationErrors.find(e => e.path === 'signUpEmail') ? 'invalid' : '' %>" aria-label="required, enter an email address in a valid form" required
+                                    >
                                 </span>
 
                                 <span class="signup__telephone__content">
@@ -65,16 +83,21 @@ style {
                                         <label for="signup__telephone--input" class="signup__telephone-label">
                                             <h2>Phone number</h2>
                                         </label>
-                                        <span class="signup__telephone--field--message" aria-live="polite"></span>
+                                        <span style="text-wrap: wrap;" class="signup__telephone--field--message" aria-live="polite">
+                                            <% let phoneError =""; %>
+                                            <% validationErrors.forEach(error => { if (error.path === 'signUpPhoneNumber') { phoneError = error.msg; } }) %>
+                                            <%= phoneError %>
+                                        </span>
                                     </span>
     
                                     <select class="signup__telephone--region" aria-label="country telephone number first two digits selection" name="countryCode">
-                                        <option <%= (oldInput.country === "EG")? selected : ""%> >EG +20</option>
-                                        <option <%= (oldInput.country === "UK")? selected : ""%> >UK +44</option>
+                                        <option <% if (oldInput.country === "EG") { %> selected <% } %> >EG +20</option>
+                                        <option <% if (oldInput.country === "UK"){ %> selected : <%}%> >UK +44</option>
                                     </select>
                                     <input 
                                     value="<%= oldInput.phone%>"
-                                    type="tel" name="signUpPhoneNumber" id="signup__telephone--input" class="<%= validationErrors.find(e => e.path === 'phone') ? 'invalid' : '' %>" aria-label="required, enter an 10 digit telephone number" required>
+                                    type="tel" name="signUpPhoneNumber" id="signup__telephone--input" class="<%= validationErrors.find(e => e.path === 'signUpPhoneNumber') ? 'invalid' : '' %>" aria-label="required, enter an 10 digit telephone number" required
+                                    >
                                 </span>
 
                                 <span class="signup__input-field">
@@ -82,13 +105,20 @@ style {
                                         <label for="signup__password--field" class="signup__password-label">
                                         <h2>Create a password</h2>
                                         </label>
-                                        <span class="signup__password--field--message" aria-live="polite"></span>
+                                        <span class="signup__password--field--message" aria-live="polite">
+                                            <% let signUpPasswordError =""; %>
+                                            <% validationErrors.forEach(error => { if (error.path === 'signUpPassword') { signUpPasswordError = error.msg; } }) %>
+                                            <%= signUpPasswordError %>                                
+                                        </span>
                                     </span>
+                                </span>
 
                                     <input 
+                                    class="signup__password--field <%= validationErrors.find(e => e.path === 'signUpPassword') ? 'invalid' : '' %>"
                                     value="<%= oldInput.signUpPassword%>"
-                                    type="password" name="signUpPassword" class="signup__password--field" id="signup__password--field" aria-label="required, enter a password not less than 8 characters, may be letters, numbers or symbols" required>
-                                    <p class="signup__password--notify <%= validationErrors.find(e => e.path === 'signUpPassword') ? 'invalid' : '' %>"" aria-hidden="true" ><em>i</em> Passwords must be at least 8 characters</p>
+                                    type="password" name="signUpPassword" id="signup__password--field" aria-label="required, enter a password not less than 8 characters, may be letters, numbers or symbols" required
+                                    >
+                                    <p class="signup__password--notify" aria-hidden="true" ><em>i</em> Passwords must be at least 8 characters</p>
                                 </span>
 
                                 <p class="signup--notice" >
@@ -116,7 +146,6 @@ style {
 
                     <div class="main__login__container__fields-container--login" id="login_container">
                         
-                        
                         <label for="radio_login" class="main__login__container__fields-container--login--label <%=(isLogin===true) ? 'whiteBG' : 'greyBG' %>"> 
                             <input type="radio" class="main__login__container__fields-container--login--selection" id="radio_login" name="log_user_select" <% if (isLogin === true) { %> checked <%} else { %> "" <%}%>>
                             <span class="login__header">Sign in. <span class="login__header2">Already a customer?</span></span>
@@ -133,7 +162,7 @@ style {
                                         </label>
                                     <input 
                                     value="<%= oldInput.loginEmail%>"
-                                    class="<%= (invalidEmailOrPhone === true) ? 'invalid' : '' %>"
+                                    class="<%= validationErrors.find(e => e.path === 'loginEmailOrPhone') ? 'invalid' : '' %>"
                                     type="text" id="login__email--field" name="loginEmailOrPhone" aria-label="required, enter your phone number or your email" placeholder="" required>
                                     <span class="login__email--field--message" aria-live="true">
                                         <%=loginErrorMessage%>
